@@ -1,3 +1,7 @@
+2015-06-19  Carl Hetherington  <cth@carlh.net>
+
+	* Fix non-working audio analysis dialogue.
+
 2015-06-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.5 released.
